--- a/urbanstory/src/css/sass/components-global/_dropdown.scss
+++ b/urbanstory/src/css/sass/components-global/_dropdown.scss
@@ -23,11 +23,13 @@ div.has-children {
    
     
     .ul-option{
+        position: absolute;
         width: 200px;
         background: $c-white;
         border: 1px solid rgba(221,221,221,0.1);
         @include box-shadow(0 5px 10px 0 rgba(0,0,0,0.2));
         @include radius;
+        z-index:1;
         ul{
             text-align: left;
             margin : 0;
