--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -3201,6 +3201,7 @@ div.has-children {
   width: 200px;
 }
 div.has-children .ul-option {
+  position: absolute;
   width: 200px;
   background: #fff;
   border: 1px solid rgba(221, 221, 221, 0.1);
@@ -3210,6 +3211,7 @@ div.has-children .ul-option {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  z-index: 1;
 }
 div.has-children .ul-option ul {
   text-align: left;
