--- a/urbanstory/pages/components/dropdown.html
+++ b/urbanstory/pages/components/dropdown.html
@@ -4,17 +4,25 @@
     </section>
     <section>
         <h4>Dropdowns</h4>
-        <div class="dropdown-menu">Grey
-            <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+        <div class="dropdown-button">
+            <div class="dropdown-menu is-rotate">Grey
+                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+            </div>
         </div>
-        <div class="dropdown-menu is-success ">Success
-            <div class="dropdown-icon is-success"><i class="icon-angle-down"></i></div>
+        <div class="dropdown-button is-firm">
+            <div class="dropdown-menu is-rotate">Firm
+                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+            </div>
         </div>
-        <div class="dropdown-menu is-firm ">Firm
-            <div class="dropdown-icon is-firm"><i class="icon-angle-down"></i></div>
+        <div class="dropdown-button is-median">
+            <div class="dropdown-menu is-rotate">Median
+                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+            </div>
         </div>
-        <div class="dropdown-menu is-median ">Median
-            <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
+        <div class="dropdown-button is-success">
+            <div class="dropdown-menu is-rotate">Success
+                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+            </div>
         </div>
         <section class="code-preview has-tab">
             <div class="card uh-tab">
@@ -78,8 +86,10 @@
         </section>
         <h4>Dropdowns clicked</h4>
         <div class="has-children is-active float-right">
-            <div class="dropdown-menu is-firm">Firm
-                <div class="dropdown-icon is-firm"><i class="icon-angle-down"></i></div>
+            <div class="dropdown-button is-firm">
+                <div class="dropdown-menu is-rotate">Firm
+                    <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+                </div>
             </div>
             <div class="ul-option">
                 <ul>  
@@ -93,8 +103,10 @@
             </div>
         </div>
         <div class="has-children is-active">
-            <div class="dropdown-menu is-median">Median
-                <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
+            <div class="dropdown-button is-median">
+                <div class="dropdown-menu is-rotate">Median
+                    <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+                </div>
             </div>
             <div class="ul-option">
                 <ul>  
@@ -269,14 +281,16 @@ div.has-children.is-active {
         </section>
         <h4>Dropdowns contains searchbar</h4>
         <div class="has-children has-searchbar is-active">
-            <div class="dropdown-menu">Grey
-                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+            <div class="dropdown-button">
+                <div class="dropdown-menu is-rotate">Grey
+                    <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+                </div>
             </div>
             <div class="ul-option">
                 <ul id="myUL">  
                     <li class="dropdown-searchbar">
                         <div class="card flex">
-                            <input type="text" id="searchInput" placeholder="Search...">
+                            <input type="text" placeholder="Search...">
                             <div class="search-icon"><i class="icon-search"></i></div>
                         </div>
                     </li>
@@ -477,8 +491,10 @@ div.has-children.is-active {
         </section>
         <h4>Dropdowns search demo</h4>
         <div class="has-children has-searchbar is-active">
-            <div class="dropdown-menu is-success">Grey
-                <div class="dropdown-icon is-success"><i class="icon-angle-down"></i></div>
+            <div class="dropdown-button is-success">
+                <div class="dropdown-menu is-rotate">Success
+                    <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+                </div>
             </div>
             <div class="ul-option">
                 <ul id="myUL">  
@@ -489,16 +505,17 @@ div.has-children.is-active {
                         </div>
                     </li>
                     <li class="li-option">
-                        <a href="#">Hello</a>
+                        <a href="">Hola</a>
                     </li>  
-                    <li class="li-option">
-                        <a href="#">Halo</a>
+                    <li class="li-option"> 
+                        <a href="">Hawimawe</a>
                     </li>
-                    <li class="li-option">
-                        <a href="#">Hai</a>
+                    <li class="li-option"> 
+                        <a href="">Holahalohai</a>
                     </li>
                 </ul>
             </div>
+        </div>
         </div>
         <section class="code-preview has-tab">
             <div class="card uh-tab">
