--- a/urbanstory/pages/components/tooltip.html
+++ b/urbanstory/pages/components/tooltip.html
@@ -33,8 +33,8 @@
         </nav>
     </div>
     <pre class="code-snippet display-off" id="sass">
-        
-        <code>
+        <button class="btn btn-firm" id="btnCopyToClipboard">Button Default</button>
+        <code id="txtKeyw">
 [data-tooltip], 
 .tooltip {
     position: relative;
