--- a/urbanstory/pages/components/dropdown.html
+++ b/urbanstory/pages/components/dropdown.html
@@ -19,7 +19,7 @@
                 <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
             </div>
         </div>
-        <div class="dropdown-button is-success">
+        <div class="dropdown-button is-green">
             <div class="dropdown-menu is-rotate">Success
                 <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
             </div>
@@ -46,7 +46,7 @@
         &lt;div class=&quot;dropdown-icon&quot;&gt;&lt;i class=&quot;icon-angle-down&quot;&gt;&lt;/i&gt;&lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
-&lt;div class=&quot;dropdown-button is-success&quot;&gt;
+&lt;div class=&quot;dropdown-button is-green&quot;&gt;
     &lt;div class=&quot;dropdown-menu is-rotate&quot;&gt;Success
         &lt;div class=&quot;dropdown-icon&quot;&gt;&lt;i class=&quot;icon-angle-down&quot;&gt;&lt;/i&gt;&lt;/div&gt;
     &lt;/div&gt;
@@ -110,7 +110,7 @@ div.has-children.is-active {
     color: $c-white;
 }
 
-.is-success {
+.is-green {
     background: $c-green-1;
     &:hover {
         background-color: $c-green-2;
@@ -349,13 +349,13 @@ div.has-children.is-active {
     }
 }
 
-.is-success,
+.is-green,
 .is-firm,
 .is-median {
     color: $c-white;
 }
 
-.is-success {
+.is-green {
     background: $c-green-1;
     &:hover {
         background-color: $c-green-2;
@@ -600,13 +600,13 @@ div.has-children.is-active {
     }
 }
 
-.is-success,
+.is-green,
 .is-firm,
 .is-median {
     color: $c-white;
 }
 
-.is-success {
+.is-green {
     background: $c-green-1;
     &:hover {
         background-color: $c-green-2;
@@ -646,7 +646,7 @@ div.has-children.is-active {
         </section>
         <h4>Dropdowns search demo</h4>
         <div class="has-children has-searchbar is-active">
-            <div class="dropdown-button is-success">
+            <div class="dropdown-button is-green">
                 <div class="dropdown-menu is-rotate">Success
                     <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
                 </div>
@@ -679,7 +679,7 @@ div.has-children.is-active {
                 </nav>
             </div>
             <pre class="code-snippet" id="html-4"><code>&lt;div class=&quot;has-children has-searchbar is-active&quot;&gt;
-    &lt;div class=&quot;dropdown-button is-success&quot;&gt;
+    &lt;div class=&quot;dropdown-button is-green&quot;&gt;
         &lt;div class=&quot;dropdown-menu is-rotate&quot;&gt;Success
             &lt;div class=&quot;dropdown-icon&quot;&gt;&lt;i class=&quot;icon-angle-down&quot;&gt;&lt;/i&gt;&lt;/div&gt;
         &lt;/div&gt;
@@ -847,13 +847,13 @@ div.has-children.is-active {
     }
 }
 
-.is-success,
+.is-green,
 .is-firm,
 .is-median {
     color: $c-white;
 }
 
-.is-success {
+.is-green {
     background: $c-green-1;
     &:hover {
         background-color: $c-green-2;
